...
import SnapKit
import GoogleAnalytics

class ChallengeViewController: UIViewController {

    var tableView: UITableView!
    var challengeTextField: UITextField!
    var challengeDatePicker: UIDatePicker!
    var addChallengeButton: UIButton!
    var addChallengeView: UIView!
    var currentChallengeToEdit: Challenge?
    var editMode: Bool = false
    var dimView: UIView!
    let layer = CAGradientLayer()

...
    // Initialize CoreData and NSFetchedResultsController
    var sharedContext: NSManagedObjectContext {
        return CoreDataStack.shared.persistentContainer.viewContext
    }
    
    lazy var fetchedResultsController: NSFetchedResultsController<Challenge> = {
        let fetchRequest = NSFetchRequest<NSFetchRequestResult>(entityName: "Challenge")
        fetchRequest.sortDescriptors = [
            NSSortDescriptor(key: "completed", ascending: true),
            NSSortDescriptor(key: "endDate", ascending: true)
        ]
        
        let fetchedResultsController = NSFetchedResultsController(fetchRequest: fetchRequest,
...
        layer.contentsGravity = kCAGravityResize
        view.layer.insertSublayer(layer, below: tableView.layer)
        
        tableView.allowsMultipleSelection = false
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: UIBarButtonSystemItem.add, target: self, action: #selector(ChallengeViewController.showOrHideChallengeView))
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "AddOrCancelButton"
    }
}

extension ChallengeViewController {

    func showOrHideChallengeView() {
...
