//
//  Theme.swift
//  Motivation Hunt
//
//  Created by Jefferson Bonnaire on 16/08/2016.
//  Copyright © 2016 Jefferson Bonnaire. All rights reserved.
//

enum Theme: String {
    case Money = "Money"
    case Success = "Success"
    case Love = "Love"
    case All = "All"
}
