...
        onboardingVC = OnboardingViewController.onboard(withBackgroundImage: UIImage.fromColor(color: #colorLiteral(red: 0.1019897072, green: 0.1019897072, blue: 0.1019897072, alpha: 1)), contents: [firstPage, secondPage, thirdPage, fourthPage])
        onboardingVC.pageControl.pageIndicatorTintColor = #colorLiteral(red: 0.501960814, green: 0.501960814, blue: 0.501960814, alpha: 1)
        onboardingVC.pageControl.currentPageIndicatorTintColor = #colorLiteral(red: 1, green: 1, blue: 1, alpha: 1)
        onboardingVC.allowSkipping = true
        onboardingVC.skipButton.setTitleColor(#colorLiteral(red: 1, green: 1, blue: 1, alpha: 1), for: UIControlState())
        onboardingVC.skipButton.setTitle("Skip", for: UIControlState())
        onboardingVC.skipButton.accessibilityIdentifier = "skipButton"
        onboardingVC.skipHandler = {
            onboardingVC.dismiss(animated: true, completion: nil)
            Defaults[.haveSeenOnBoarding] = true
        }
        onboardingVC.fadePageControlOnLastPage = true
        onboardingVC.fadeSkipButtonOnLastPage = true
...
